--- a/views/css/ns_monmodule.css
+++ b/views/css/ns_monmodule.css
@@ -1,6 +1,6 @@
 #ns_monmodule_block_home {
     box-shadow: 2px 2px 8px 0 rgba(0,0,0,.2);
-    background: #fff;
+    background-color: #fff;
     padding: 1.563rem 1.25rem;
     margin-bottom: 1.563rem;
 }
